@@ -9,6 +9,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
   NOTE: The file format has changed. Files from 2.04 and 2.05
   can still be read by this version.
 
+  Now builds on Windows, with thanks to Jan Dubois!
+
   Subroutine inclusive time no longer counts time
     spent recursed into the same subroutine. That time is
     now recorded separately, along with the max recursion depth.
